--- a/frameworks/digital-service-professionals/questions/briefs/budgetRangeSpecialists.yml
+++ b/frameworks/digital-service-professionals/questions/briefs/budgetRangeSpecialists.yml
@@ -1,7 +1,7 @@
-name: Maximum day rate
+name: Optional—Maximum day rate
 id: budgetRange
-question: Optional
-question_advice: |
+question: 
+question_advice: 
   Enter a maximum day rate to exclude the specialists who don't match your budget. 
 
 optional: true
