--- a/frameworks/digital-service-professionals/questions/briefs/contractLength.yml
+++ b/frameworks/digital-service-professionals/questions/briefs/contractLength.yml
@@ -1,6 +1,6 @@
 name: Expected contract length
-question: Expected contract length
-question_advice: Contracts can’t last for more than 2 years.
+question: 
+question_advice: Contracts can not exceed 12 months. If you need to, break the work required into smaller components.
 type: text
 optional: true
 depends:
