--- a/frameworks/digital-service-professionals/questions/briefs/culturalWeightingSpecialists.yml
+++ b/frameworks/digital-service-professionals/questions/briefs/culturalWeightingSpecialists.yml
@@ -1,9 +1,9 @@
 id: culturalWeighting
-question: 'Cultural fit'
+question: Cultural fit
 question_advice: > 
   Cultural fit is how well you and the specialist will work together. 
   If the specialist’s values and behaviour are similar to your organisation’s, they should be a good cultural fit.
-hint: 'This can be between 5% and 20%'
+hint: This can be between 5% and 20%
 
 depends:
   - "on": lot
