--- a/frameworks/digital-service-professionals/questions/briefs/organisation.yml
+++ b/frameworks/digital-service-professionals/questions/briefs/organisation.yml
@@ -1,6 +1,7 @@
-name: Organisation the work is for
-question: Organisation the work is for
-question_advice: 'eg National Audit Office or Lewisham Council'
+name: Who will the digital specialist work for? 
+question: 
+question_advice: 
+  Please the government department, agency or organisation in full. So, Department of Human Services—rather than DHS. 
 hint: 100 characters maximum
 type: text
 depends:
