--- a/frameworks/digital-service-professionals/questions/briefs/workplaceAddress.yml
+++ b/frameworks/digital-service-professionals/questions/briefs/workplaceAddress.yml
@@ -1,6 +1,11 @@
-name: Address where the work will take place
-question: Address where the work will take place
-question_advice: You must include a specific town or city. You can add more than one.
+name: Where will the work take place?
+question:
+question_advice: Add the full address of the primary work location. 
+
+If you don't have the full address please add the city or town. 
+
+You can include more than one location.
+
 type: textbox_large
 max_length_in_words: 100
 depends:
