--- a/frameworks/digital-service-professionals/questions/briefs/locationSpecialists.yml
+++ b/frameworks/digital-service-professionals/questions/briefs/locationSpecialists.yml
@@ -1,4 +1,4 @@
-name: Where will the work take place?
+name: Where in Australia will the work take place?
 question: 
 id: location
 question_advice: 
