--- a/frameworks/digital-service-professionals/questions/briefs/securityClearance.yml
+++ b/frameworks/digital-service-professionals/questions/briefs/securityClearance.yml
@@ -1,11 +1,11 @@
-name: Security clearance
-question: Security clearance
-question_advice: |
+name: Does the specialist need security clearance?
+question: 
+question_advice:
+
   Describe any security clearance the individual or team must have when they start work.
 
-  You shouldn’t exclude suppliers if they don’t currently have the security clearance you need.
+  If the specialist doesn't currently have the security clearance you need, you may need to organise security clearance.
 
-  You may need to organise security clearance.
 type: textbox_large
 optional: true
 max_length_in_words: 50
