--- a/frameworks/digital-service-professionals/questions/briefs/additionalTerms.yml
+++ b/frameworks/digital-service-professionals/questions/briefs/additionalTerms.yml
@@ -1,9 +1,8 @@
-name: Additional terms and conditions
-question: Additional terms and conditions
+name: Optional: Are there any special terms and conditions?
+question: 
 question_advice: |
-  You should use the [standard contract](https://www.gov.uk/government/publications/digital-outcomes-and-specialists-call-off-contract) unless your organisation needs to include additional terms and conditions.
+  You should use the standard [Work Order ](https://www.gov.au/marketplace/static/media/documents/DSPP_Order_Template.docx) unless your organisation needs to include additional terms and conditions.
 
-  Read about [how the terms and conditions work](https://www.gov.uk/guidance/terms-and-conditions-of-digital-marketplace-frameworks).
 optional: true
 type: textbox_large
 max_length_in_words: 100
