--- a/frameworks/digital-service-professionals/questions/briefs/budgetRangeSpecialists.yml
+++ b/frameworks/digital-service-professionals/questions/briefs/budgetRangeSpecialists.yml
@@ -2,7 +2,7 @@ name: Optional: Maximum day rate
 id: budgetRange
 question: 
 question_advice: 
-  Enter a maximum day rate to exclude the specialists who don't match your budget. 
+  By entering a maximum day rate you can exclude the specialists who don't match your budget. 
 
 optional: true
 type: textbox_large
