--- a/frameworks/digital-service-professionals/questions/briefs/summary.yml
+++ b/frameworks/digital-service-professionals/questions/briefs/summary.yml
@@ -1,5 +1,5 @@
 name: Summary of the work
-question: Summary
+question: 
 question_advice: >
   This will appear on the supplier opportunities page on the Digital Marketplace.
   It will help suppliers decide whether or not to view your requirements.
