--- a/frameworks/digital-service-professionals/questions/briefs/additionalTerms.yml
+++ b/frameworks/digital-service-professionals/questions/briefs/additionalTerms.yml
@@ -1,4 +1,4 @@
-name: Optional: Are there any special terms and conditions?
+name: Are there any special terms and conditions?
 question: 
 question_advice: |
   You should use the standard [Work Order ](https://www.gov.au/marketplace/static/media/documents/DSPP_Order_Template.docx) unless your organisation needs to include additional terms and conditions.
