--- a/frameworks/digital-service-professionals/questions/briefs/weightingOutcomes.yml
+++ b/frameworks/digital-service-professionals/questions/briefs/weightingOutcomes.yml
@@ -1,5 +1,5 @@
 name: Evaluation weighting
-question: Evaluation weighting
+question: 
 question_advice: |
   Use the weightings to say how important each evaluation criteria is.
 
