--- a/frameworks/digital-service-professionals/questions/briefs/technicalCompetenceCriteriaSpecialists.yml
+++ b/frameworks/digital-service-professionals/questions/briefs/technicalCompetenceCriteriaSpecialists.yml
@@ -1,5 +1,5 @@
 name: Technical competence criteria
-question: Technical competence criteria
+question: 
 question_advice: |
   Technical competence is how well the supplier can do the work you need them to do.
 
@@ -9,12 +9,10 @@ question_advice: |
   - nice-to-have skills and experience
 
   ##Giving points for individual criteria (optional)
-  You can give points to individual criteria, eg ‘have experience designing services for users with low digital literacy – 15 points’. If you choose to add points, you must do it for all individual criteria.
+  You can give points to individual criteria. For example ‘have experience designing services for users with low digital literacy – 15 points’. If you choose to add points, you must do it for all individual criteria.
 
   The points you give for nice-to-have skills and experience must be lower than the points you give for
   essential skills and experience.
-  Read [how to score individual criteria](https://www.gov.uk/guidance/how-to-set-your-evaluation-criteria-when-buying-digital-outcomes-and-specialists-services#giving-points-to-individual-criteria).
-
 
 optional: false
 type: multiquestion
