--- a/frameworks/digital-service-professionals/questions/briefs/technicalCompetenceCriteriaSpecialists.yml
+++ b/frameworks/digital-service-professionals/questions/briefs/technicalCompetenceCriteriaSpecialists.yml
@@ -9,7 +9,7 @@ question_advice: |
   - nice-to-have skills and experience
 
   ##Giving points for individual criteria (optional)
-  You can give points to individual criteria. For example ‘have experience designing services for users with low digital literacy – 15 points’. If you choose to add points, you must do it for all individual criteria.
+  You can give points to individual criteria. For example, 'have experience designing services for users with low digital literacy – 15 points’. If you choose to add points, you must do it for all individual criteria.
 
   The points you give for nice-to-have skills and experience must be lower than the points you give for
   essential skills and experience.
