--- a/frameworks/digital-service-professionals/questions/briefs/requirementsLengthSpecialists.yml
+++ b/frameworks/digital-service-professionals/questions/briefs/requirementsLengthSpecialists.yml
@@ -1,5 +1,5 @@
-name: Set how long your requirements will be open for
-question: Set how long your requirements will be open for
+name: How long will your requirements will be open for?
+question: 
 id: requirementsLength
 type: radios
 options:
