tests and yml fix

--- a/frameworks/digital-service-professionals/questions/briefs/backgroundInformation.yml
+++ b/frameworks/digital-service-professionals/questions/briefs/backgroundInformation.yml
@@ -1,5 +1,5 @@
 name: What project is this work part of?
-question:
+question: ''
 question_advice: |
   Briefly describe the project or policy goal this work supports and include any important dates. 
 
