--- a/frameworks/digital-service-professionals/questions/briefs/locationSpecialists.yml
+++ b/frameworks/digital-service-professionals/questions/briefs/locationSpecialists.yml
@@ -1,5 +1,5 @@
 name: Where in Australia will the work take place?
-question: 
+question: ''
 id: location
 question_advice: 
   This can be more than one location. If the specialist can work anywhere, choose 'Can work remotely'.
