--- a/frameworks/digital-service-professionals/questions/briefs/questionAndAnswerSessionDetailsSpecialists.yml
+++ b/frameworks/digital-service-professionals/questions/briefs/questionAndAnswerSessionDetailsSpecialists.yml
@@ -1,6 +1,6 @@
 id: questionAndAnswerSessionDetails
 name: Question and answer session details
-question: 
+question: ''
 question_advice: |
   If you run a question and answer session, you must include:
 
