--- a/frameworks/digital-service-professionals/questions/briefs/securityClearance.yml
+++ b/frameworks/digital-service-professionals/questions/briefs/securityClearance.yml
@@ -1,11 +1,7 @@
 name: Does the specialist need security clearance?
-question: 
-question_advice:
-
-  Describe any security clearance the individual or team must have when they start work.
-
-  If the specialist doesn't currently have the security clearance you need, you may need to organise security clearance.
-
+question: ''
+question_advice: "Describe any security clearance the individual or team must have when they start work.
+  If the specialist doesn't currently have the security clearance you need, you may need to organise security clearance."
 type: textbox_large
 optional: true
 max_length_in_words: 50
