--- a/frameworks/digital-service-professionals/questions/briefs/specialistRole.yml
+++ b/frameworks/digital-service-professionals/questions/briefs/specialistRole.yml
@@ -1,5 +1,5 @@
 name: What type of specialist do you need?
-question: 
+question: ''
 question_advice: You can only create a brief for 1 specialist at a time. If you need additional specialists, create additional briefs.
 type: radios
 options:
