--- a/frameworks/digital-service-professionals/questions/briefs/technicalCompetenceCriteriaSpecialists.yml
+++ b/frameworks/digital-service-professionals/questions/briefs/technicalCompetenceCriteriaSpecialists.yml
@@ -1,5 +1,5 @@
 name: Technical competence criteria
-question: 
+question: ''
 question_advice: |
   Technical competence is how well the supplier can do the work you need them to do.
 
