--- a/frameworks/digital-service-professionals/questions/briefs/contractLength.yml
+++ b/frameworks/digital-service-professionals/questions/briefs/contractLength.yml
@@ -1,5 +1,5 @@
 name: How long is your initial contract?
-question: 
+question: ''
 question_advice: Contracts cannot exceed 12 months. If you need to, break the work required into smaller components.
 type: text
 optional: true
