--- a/frameworks/digital-service-professionals/questions/briefs/evaluationTypeSpecialists.yml
+++ b/frameworks/digital-service-professionals/questions/briefs/evaluationTypeSpecialists.yml
@@ -1,6 +1,6 @@
 name: How you’ll assess specialists
 id: evaluationType
-question: 
+question: ''
 question_advice: |
   You must ask all specialists that reach the assessment stage for a work history.
 
