--- a/frameworks/digital-service-professionals/questions/briefs/weightingSpecialists.yml
+++ b/frameworks/digital-service-professionals/questions/briefs/weightingSpecialists.yml
@@ -1,5 +1,5 @@
 name: Evaluation weighting
-question: 
+question: ''
 question_advice: |
   Use the weightings to say how important each evaluation criteria is.
 
