--- a/frameworks/digital-service-professionals/questions/briefs/workingArrangements.yml
+++ b/frameworks/digital-service-professionals/questions/briefs/workingArrangements.yml
@@ -1,5 +1,5 @@
 name: What are the working arrangements?
-question: 
+question: ''
 question_advice: |
   Describe how you want to work with the individual or team and include any limits on expenses.
   
