--- a/frameworks/digital-service-professionals/questions/briefs/locationSpecialists.yml
+++ b/frameworks/digital-service-professionals/questions/briefs/locationSpecialists.yml
@@ -2,7 +2,7 @@ name: Where in Australia will the work take place?
 question: Work location
 id: location
 question_advice: 
-  This can be more than one location. If the specialist can work anywhere, choose 'Can work remotely'.
+  "This can be more than one location. If the specialist can work anywhere, choose 'Can work remotely'."
 type: radios
 options:
   - label: "Australian Capital Territory"
