--- a/frameworks/digital-service-professionals/questions/briefs/startDate.yml
+++ b/frameworks/digital-service-professionals/questions/briefs/startDate.yml
@@ -1,8 +1,6 @@
 name: When do you want the specialist to start?
-question: ''
-question_advice: |
-  Say when you need suppliers to commence work. When you shortlist, you can exclude suppliers who can't start by this date.
-hint: 'eg 31/12/2016'
+question: 'Start date'
+question_advice:'For example, 31/12/2016'
 type: text
 depends:
   - "on": "lot"
