--- a/frameworks/digital-service-professionals/questions/briefs/budgetRangeSpecialists.yml
+++ b/frameworks/digital-service-professionals/questions/briefs/budgetRangeSpecialists.yml
@@ -1,6 +1,6 @@
-name: Maximum day rate
+name: How much can you spend per day?
 id: budgetRange
-question: "Optional"
+question: "Maximum Day rate"
 question_advice: "Enter a maximum day rate to exclude the specialists who don't match your budget."
 optional: true
 type: textbox_large
