--- a/frameworks/digital-service-professionals/questions/briefs/culturalFitCriteriaSpecialists.yml
+++ b/frameworks/digital-service-professionals/questions/briefs/culturalFitCriteriaSpecialists.yml
@@ -1,6 +1,6 @@
-name: Cultural fit criteria
+name: How important is cultural fit?
 id: culturalFitCriteria
-question: ''
+question: 'Cultural fit'
 question_advice: |
   Cultural fit is how well you and the individual or team will work together. If the supplier’s values and behaviour
   are similar to your organisation’s, they should be a good cultural fit.
