--- a/frameworks/digital-service-professionals/questions/briefs/evaluationTypeSpecialists.yml
+++ b/frameworks/digital-service-professionals/questions/briefs/evaluationTypeSpecialists.yml
@@ -1,12 +1,10 @@
 name: How you’ll assess specialists
 id: evaluationType
-question: ''
+question: 'Evaluation methods'
 question_advice: |
   You must ask all specialists that reach the assessment stage for a work history.
-
-  Choose additional ways to assess specialists.
-
-  You can only use the methods you choose here. So, if you don’t select interview, you won’t be able to interview specialists.
+  
+  You can also choose additional evaluation methods. You can only use the methods you choose here. 
 
   Read about [assessment methods](https://www.gov.uk/guidance/ways-to-assess-digital-outcomes-and-specialists-suppliers).
 type: checkboxes
@@ -19,13 +17,13 @@ options:
   - label: "Reference"
     description: >
        A written reference is a good way of confirming whether a specialist has done the work they’ve said they’ve 
-       done. You should always ask for references that relate to a specific timeframe, for example the work they’ve done in the 
+       done. You should always ask for references that relate to a specific time frame, for example the work they’ve done in the 
        last 2 years.
   - label: "Interview"
     description: >
        An interview can help you understand whether a specialist or team has the skills needed to work on your project.
         It will also help you see whether they will be a good fit for your existing team. You should follow an agreed 
-        format and ask all specialists the same set of questions.
+        format and ask all specialists the same questions.
   - label: "Scenario or test"
     description: >
        A scenario or test can help you confirm a supplier’s skill level and understanding in a controlled environment. For example, a coding test for a developer or the approach a product manager would take to solve an example problem.
