--- a/frameworks/digital-service-professionals/questions/briefs/startDate.yml
+++ b/frameworks/digital-service-professionals/questions/briefs/startDate.yml
@@ -1,6 +1,6 @@
 name: When do you want the specialist to start?
-question: 'Start date'
-question_advice:'For example, 31/12/2016'
+question: Start date
+question_advice: For example, 31/12/2016
 type: text
 depends:
   - "on": "lot"
