--- a/frameworks/digital-service-professionals/questions/briefs/workplaceAddress.yml
+++ b/frameworks/digital-service-professionals/questions/briefs/workplaceAddress.yml
@@ -1,6 +1,6 @@
 name: Where will the work take place?
-question: 'Primary workplace address'
-question_advice:"If you don't have the full address please add the city or town. You can include more than one location."
+question: Primary workplace address
+question_advice: If you don't have the full address please add the city or town. You can include more than one location.
 type: textbox_large
 max_length_in_words: 100
 depends:
