--- a/frameworks/g-cloud-8/messages/contract_variation_1.yml
+++ b/frameworks/g-cloud-8/messages/contract_variation_1.yml
@@ -68,43 +68,43 @@ framework_agreement_changes:
     -
       clause: '9.1'
       change: |
-          <span class="visuallyhidden">start insertion</span> <ins>‘Call-Off Contract'</ins><span class="visuallyhidden">end insertion</span>
+          ‘Call-Off Contract'<br />
           The legally binding agreement (entered into following the provisions of this Framework Agreement) for the 
           provision of Services made between a Buyer and the Supplier.  This may include the Order Form detailing service
           requirements, <span class="visuallyhidden">start deletion</span><del>term</del><span class="visuallyhidden">end deletion</span>
           <span class="visuallyhidden">start insertion</span><ins>terms and conditions substantially in the
           form of the Call-Off Terms</ins><span class="visuallyhidden">end insertion</span>, term of Call-Off Order, 
           start date and pricing.
+          <br /><br />
 
-
-
-          <span class="visuallyhidden">start insertion</span><ins>'Call-Off Terms' The terms and conditions as published 
+          <span class="visuallyhidden">start insertion</span><ins>
+          'Call-Off Terms'<br />
+          The terms and conditions as published 
           with the Contract Notice within the Official Journal of the European Union referred to in the OJEU Contract 
-          Notice reference number RM1557viii.<span class="visuallyhidden">end insertion</span>
+          Notice reference number RM1557viii.
+          <span class="visuallyhidden">end insertion</span>
 
 call_off_contract_changes:
     - 
       clause: '16.1'
       change: |
-          16.1	The Supplier will allow CCS (and CCS’s external auditor) to access its information and conduct audits 
+          The Supplier will allow CCS (and CCS’s external auditor) to access its information and conduct audits 
           of the Services provided under this Call-Off Contract and the provision of Management Information 
           <span class="visuallyhidden">start insertion</span><ins>(subject to reasonable and appropriate confidentiality 
           undertakings)</ins><span class="visuallyhidden">end insertion</span>.
     - 
       clause: '43'
       change: |
-          <span class="visuallyhidden">start insertion</span> <ins>'Management Information'</ins><span class="visuallyhidden">end insertion</span>
-          The management information (MI) specified in section 6 (What you report to CCS) of  
-          <span class="visuallyhidden">start deletion</span> <del>this</del><span class="visuallyhidden">end deletion</span>
-          <span class="visuallyhidden">start insertion</span> <ins>the</ins><span class="visuallyhidden">end insertion</span>
-          Framework Agreement.
+          'Management Information'<br />
+          The management information (MI) specified in section 6 (What you report to CCS) of <span class="visuallyhidden">start insertion</span><ins>the</ins><span class="visuallyhidden">end insertion</span>
+          <span class="visuallyhidden">start deletion</span> <del>this</del><span class="visuallyhidden">end deletion</span> Framework Agreement.
+          <br /><br />
 
-
-
-          <span class="visuallyhidden">start insertion</span><ins>’Framework Agreement’ The </ins><span class="visuallyhidden">end insertion</span>
-          <span class="visuallyhidden">start deletion</span> <del>This</del><span class="visuallyhidden">end deletion</span></del><span class="visuallyhidden">end deletion</span>
+          ’Framework Agreement’<br />
+          <span class="visuallyhidden">start insertion</span><ins>The</ins><span class="visuallyhidden">end insertion</span>
+          <span class="visuallyhidden">start deletion</span> <del>This</del><span class="visuallyhidden">end deletion</span></del><span class="visuallyhidden">end deletion</span> 
           contractually-binding 
           <span class="visuallyhidden">start deletion</span> <del>document</del><span class="visuallyhidden">end deletion</span>
-          <span class="visuallyhidden">start insertion</span> <ins> framework agreement between Crown Commercial 
-          Services and the Supplier, reference number: RM1557viii, referred to in the Order Form.</ins>
+          <span class="visuallyhidden">start insertion</span> <ins> framework agreement between the Crown Commercial 
+          Service and the Supplier, reference number: RM1557viii, referred to in the Order Form.</ins>
           <span class="visuallyhidden">end insertion</span>
