--- a/frameworks/digital-service-professionals/questions/briefs/titleSpecialists.yml
+++ b/frameworks/digital-service-professionals/questions/briefs/titleSpecialists.yml
@@ -1,5 +1,5 @@
 id: title
-name: Create a headline for your brief
+name: Create a title for your brief
 question: Title
 question_advice: |
   For example 'Developer needed for immediate start'. Or simply, 'Ethical Hacker—6 month project'. 
