--- a/frameworks/digital-service-professionals/questions/briefs/specialistRole.yml
+++ b/frameworks/digital-service-professionals/questions/briefs/specialistRole.yml
@@ -1,4 +1,4 @@
-name: What type of specialist do you need?
+name: What type of digital specialist do you need?
 question: ''
 question_advice:
 type: radios
