--- a/frameworks/digital-service-professionals/questions/briefs/specialistWork.yml
+++ b/frameworks/digital-service-professionals/questions/briefs/specialistWork.yml
@@ -1,4 +1,4 @@
-name: What the specialist will do
+name: What will the specialist do?
 question: 'Work summary'
 question_advice: |
  List all tasks you want the specialist to do. 
