--- a/frameworks/digital-service-professionals/questions/briefs/contractLength.yml
+++ b/frameworks/digital-service-professionals/questions/briefs/contractLength.yml
@@ -1,6 +1,6 @@
-name: How long is your initial contract?
+name: How long is the contract?
 question: 'Contract length'
-question_advice: Contracts cannot exceed 12 months. If you need to, break the work required into smaller components.
+question_advice: Contracts cannot exceed 12 months.
 type: text
 optional: true
 depends:
