--- a/frameworks/digital-service-professionals/questions/briefs/additionalTerms.yml
+++ b/frameworks/digital-service-professionals/questions/briefs/additionalTerms.yml
@@ -1,6 +1,11 @@
-name: Are there any special terms and conditions?
+name: Additional terms and conditions
 question: Additional terms and conditions
-question_advice: Use the standard [Work Order](https://www.gov.au/marketplace/static/media/documents/DSPP_Order_Template.docx) unless your organisation needs to include additional terms and conditions.
+question_advice: |
+
+We recommend using the terms and conditions in the [Deed of Standing Offer] that suppliers in the Digital Marketplace have already agreed to. 
+
+However, if you need to set out any additional terms and conditions, you can do so here.
+
 optional: true
 type: textbox_large
 max_length_in_words: 100
