--- a/frameworks/digital-service-professionals/questions/briefs/additionalTerms.yml
+++ b/frameworks/digital-service-professionals/questions/briefs/additionalTerms.yml
@@ -2,7 +2,7 @@ name: Additional terms and conditions
 question: Additional terms and conditions
 question_advice: |
 
-We recommend using the terms and conditions in the [Deed of Standing Offer] that suppliers in the Digital Marketplace have already agreed to. 
+All suppliers in the Digital Marketplace have already agreed to these terms and conditions in the [Deed of Standing Offer](https://www.gov.au/marketplace/static/media/documents/DSPP_Deed_of_Standing_Offer.pdf).
 
 However, if you need to set out any additional terms and conditions, you can do so here.
 
